# out/nodejs-express-server/services/WiMWechselprozesseImMesswesenStromStatusAPIService.js
@@ -6,7 +6,7 @@ const Service = require('./Service');
 * Access to status information of an existing metering change and allocation process. 
 *
 * vid String VID key of the process. (optional)
-* returns inline_response_200_7
+* returns inline_response_200_6
 * */
 const wimstatus = ({ vid }) => new Promise(
   async (resolve, reject) => {
